add_library(feature_index feature_index.cpp)
target_link_libraries(feature_index dense-multicut)

add_library(feature_index_brute_force feature_index_brute_force.cpp)
target_link_libraries(feature_index_brute_force feature_index dense-multicut)

add_library(feature_index_faiss feature_index_faiss.cpp)
target_link_libraries(feature_index_faiss feature_index faiss dense-multicut)

add_library(feature_index_hnswlib feature_index_hnswlib.cpp)
target_link_libraries(feature_index_hnswlib feature_index dense-multicut)

add_library(dense_multicut_utils dense_multicut_utils.cpp)
target_link_libraries(dense_multicut_utils dense-multicut)

add_library(dense_gaec dense_gaec.cpp)
target_link_libraries(dense_gaec PRIVATE faiss dense-multicut dense_multicut_utils feature_index feature_index_faiss feature_index_brute_force feature_index_hnswlib)

add_library(dense_gaec_parallel dense_gaec_parallel.cpp)
target_link_libraries(dense_gaec_parallel PRIVATE faiss dense-multicut dense_multicut_utils feature_index feature_index_faiss feature_index_brute_force feature_index_hnswlib)

add_library(dense_gaec_adj_matrix dense_gaec_adj_matrix.cpp)
target_link_libraries(dense_gaec_adj_matrix PRIVATE dense-multicut dense_multicut_utils)

add_library(incremental_nns incremental_nns.cpp)
target_link_libraries(incremental_nns dense-multicut)

add_library(dense_gaec_incremental_nn dense_gaec_incremental_nn.cpp)
target_link_libraries(dense_gaec_incremental_nn PRIVATE incremental_nns faiss dense-multicut dense_multicut_utils feature_index feature_index_faiss feature_index_brute_force feature_index_hnswlib)

add_library(dense_features_parser dense_features_parser.cpp)

add_executable(dense_multicut_text_input dense_multicut_text_input.cpp)
target_link_libraries(dense_multicut_text_input PRIVATE dense_features_parser dense-multicut faiss dense_gaec dense_gaec_parallel dense_gaec_adj_matrix dense_gaec_incremental_nn)

pybind11_add_module(dense_multicut_py dense_multicut_py.cpp)
target_link_libraries(dense_multicut_py PRIVATE dense_gaec dense_gaec_parallel dense_gaec_adj_matrix dense_gaec_incremental_nn dense_multicut_utils) 
